# cargo

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml  fs_test.py  test_create.py
.github/workflows/: main.yml  squash.yaml
ci/: azure-install-rust.yml  azure-test-all.yml  squash.sh  validate-man.sh
contrib/: print.html  searchindex.js  searchindex.json
contrib/architecture/: index.html  subcommands.html
crates/cargo-test-support/: Cargo.toml
crates/cargo-test-support/src/: lib.rs  publish.rs
crates/crates-io/: lib.rs
src/cargo/: lib.rs
src/cargo/core/: features.rs  interning.rs  manifest.rs  package.rs  workspace.rs
src/cargo/ops/: cargo_clean.rs  cargo_compile.rs  cargo_output_metadata.rs  cargo_run.rs  cargo_test.rs
src/cargo/sources/: directory.rs  mod.rs  path.rs  replaced.rs  stdlib.rs
src/cargo/util/: canonical_url.rs  config.rs  diagnostic_server.rs  paths.rs  progress.rs  workspace.rs
src/doc/: Makefile
src/doc/man/: cargo-build.md
src/etc/man/: cargo-bench.1  cargo-build.1  cargo-check.1  cargo-clean.1  cargo-doc.1  (+27 more)
tests/build-std/: main.rs
tests/testsuite/: advanced_env.rs  build.rs  build_plan.rs  build_script.rs  cargo_alias_config.rs  cargo_command.rs  clean.rs  collisions.rs  config.rs  cross_compile.rs  death.rs  dep_info.rs  explicit_std.rs  features.rs  features2.rs  fix.rs  freshness.rs  future_incompat_report.rs  install.rs  install_upgrade.rs  main.rs  metabuild.rs  out_dir.rs  path.rs  profile_targets.rs  progress.rs  standard_lib.rs  test.rs
tests/testsuite/mock-std/src/libstd/: Cargo.toml
(+73 files in other folders)
