[package]
name = "std"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
registry-dep-using-alloc = { version = "*", features = ['mockbuild'] }
panic_unwind = { path = "../libpanic_unwind" }
# This is just a random dependency to exercise -Zforce-unstable-if-unmarked.
something-private = { path = "../libprivate" }
